--- a/style.css
+++ b/style.css
@@ -206,3 +206,85 @@ aside p {
 .sub-menu a:hover {
     color: #0bd;
 }
+
+@media (max-width:600px){
+    .page-title {
+        font-size: 2.5rem;
+    }
+
+    .main-nav {
+        font-size: 1rem;
+        margin-top: 10px;
+    }
+
+    .main-nav li {
+        margin: 0 20px;
+    }
+
+    .home-content {
+        margin-top: 20%;
+    }
+
+    .page-header {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .news-content {
+        flex-direction: column;
+    }
+
+    article ,aside {
+        width: 100%;
+    }
+
+    #news .page-title {
+        margin-top: 30px;
+    }
+
+    aside {
+        margin-top: 60px;
+    }
+
+    .post-info {
+        margin-bottom: 30px;
+    }
+
+    .post-date {
+        width: 70px;
+        height: 70px;
+        font-size: 1rem;
+    }
+
+    .post-date span {
+        font-size: 0.875rem;
+        padding-top: 2px;
+    }
+
+    .post-title {
+        font-size: 1.375rem
+        }
+
+    .post-cat {
+        font-size: 0.875rem;
+        margin-top: 10px;
+    }
+
+    .post-title,.post-cat {
+        margin-left: 80px;
+    }
+}
+
+article {
+    width: 60%;
+    order: 2;
+}
+
+aside {
+    width: 22%;
+    order: 3;
+}
+
+.ad {
+    order: 1;
+}
